fix messageContent spacing, trim()

--- a/chatapp.client/src/styles.css
+++ b/chatapp.client/src/styles.css
@@ -219,6 +219,7 @@ body {
 
 .wrap-anywhere {
   overflow-wrap: anywhere;
+  white-space: pre-wrap;
 }
 
 
